--- a/practica-4/resources/src/Makefile
+++ b/practica-4/resources/src/Makefile
@@ -1,10 +1,12 @@
 dirs := Info Sum FTP
+conv_dirs := Info Sum
 
 all: clean build
 
 build:
 	$(foreach dir, $(dirs), mkdir $(dir)/classes;)
-	$(foreach dir, $(dirs), javac -classpath lib/jade.jar -d $(dir)/classes $(dir)/$(dir)Agent.java;)
+	$(foreach dir, $(conv_dirs), javac -classpath lib/jade.jar -d $(dir)/classes $(dir)/$(dir)Agent.java;)
+	javac -classpath lib/jade.jar -d FTP/classes FTP/FTPAgent.java FTP/FTPCommand.java
 
 start:
 	java -cp lib/jade.jar:classes jade.Boot -gui
@@ -16,7 +18,7 @@ run-sum:
 	cd Sum && java -cp ../lib/jade.jar:classes jade.Boot -gui -container -host localhost -agents mol:SumAgent
 
 run-ftp:
-	./FTP/run --help
+	cd FTP && ./FTP/run --help
 
 clean:
 	- rm -rf APDescription.txt MTPs-Main-Container.txt
